<resources>
  <string name="action_settings">Settings</string>
  <string name="certificates">Certificates</string>
  <string name="locate">locate</string>
  <string name="client_certificates">Client Certificates</string>
  <string name="endpoint">Endpoint</string>
  <string name="master_url">Kubernetes Master URL</string>
  <string name="cluster_ca_certificate">Kubernetes CA Certificate</string>
  <string name="client_private_key">Client Private Key</string>
  <string name="client_certificate">Client Certificate</string>
  <string name="not_set">Not set</string>
  <string name="proxy_url">Proxy Url</string>
  <string name="proxy_port">Proxy Port</string>
  <string name="master_url_title">Kubernetes Master URL</string>
  <string name="hint_master_url">https://kubernetes.default:6443</string>
  <string name="hint_proxy_url">http://localhost:8001</string>
  <string name="hint_proxy_port">8001</string>
  <string name="settings">Settings</string>
  <string name="add_cluster">New Config</string>
  <string name="delete_cluster">Delete</string>
  <string name="auth">Authentication</string>
  <string name="bearer_token">Bearer Token</string>
  <string name="allow_insecure">Allow insecure connections</string>
  <string name="proxy_connections">Proxy Connections</string>
  <string name="edit_name">Edit name</string>
  <string name="edit_config_name">Edit config name</string>
  <string name="hint_edit_config_name">e.g AKS - US Virginia</string>
  <string name="body_allow_insecure">Skips the validity check for the server\'s certificate. This will make your HTTPS connections insecure.</string>
  <string name="body_bearer_token">The bearer token for authentication to the kubernetes cluster</string>
  <string name="body_client_certificate">PEM-encoded data from a client cert file for TLS</string>
  <string name="body_client_private_key">PEM-encoded data from a client key file for TLS.</string>
  <string name="body_cluster_ca_certificate">PEM-encoded certificate authority certificates.</string>
  <string name="body_master_url">The address of the kubernetes cluster.</string>
  <string name="body_proxy_url">The proxy to route connections through.</string>
  <string name="reset">Reset</string>
  <string name="storage">Storage</string>
  <string name="configuration">Configuration</string>
  <string name="services">Services</string>
  <string name="workloads">Workloads</string>
  <string name="clusters">Clusters</string>
  <string name="filter">Filter</string>
  <string name="search">Search</string>
  <string name="deployments">Deployments</string>
  <string name="stateful_sets">Stateful Sets</string>
  <string name="daemon_sets">Daemon Sets</string>
  <string name="jobs">Jobs</string>
  <string name="workload_type">Workload Type</string>
  <string name="namespaces">Namespaces</string>
  <string name="namespaces_chip">Namespace: %1$s</string>
  <string name="workload_chip">Type: %1$s</string>
</resources>
