<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.tevinjeffrey.kubernetes.home.host.HostActivity">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="100"
        android:title="@string/edit_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:orderInCategory="100"
        android:title="@string/add_cluster"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="100"
        android:title="@string/delete_cluster"
        />
    <item
        android:id="@+id/action_reset"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="100"
        android:title="@string/reset"
        />
</menu>
