<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.tevinjeffrey.kubernetes.home.host.HostActivity">

    <TextView
        android:id="@+id/clientCertText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/client_certificates"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/clientKeyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ubuntu"
        android:text="Client Key"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientCertText" />

    <TextView
        android:id="@+id/clusterCACrtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ubuntu"
        android:text="Cluster CA Cert"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientKeyText" />

    <Button
        android:id="@+id/clientCrtBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/locate"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/clientCertText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/clientCertText"
        app:layout_constraintTop_toTopOf="@+id/clientCertText"
        app:layout_constraintVertical_bias="0.538" />

    <Button
        android:id="@+id/clientKeyBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/locate"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/clientKeyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/clientKeyText"
        app:layout_constraintTop_toTopOf="@+id/clientKeyText" />

    <Button
        android:id="@+id/clusterCACrtBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/locate"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/clusterCACrtText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/clientKeyText"
        app:layout_constraintTop_toTopOf="@+id/clusterCACrtText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_final_logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/certificates"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

</android.support.constraint.ConstraintLayout>
